--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,18 @@
+body {
+    padding: 20px;
+}
+.contenedor {
+    display: flex;
+    justify-content: flex-start;
+}
+
 .botones {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    margin-left: 100px;
-    padding: 10px
+    justify-content: space-between;
+}
+
+.btn-primary {
+    padding: 10px;
+    margin: 20px;
 }
