Creación de los cuadrados

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,3 +16,11 @@ body {
     padding: 10px;
     margin: 20px;
 }
+
+.cuadrado {
+    width: 100px;
+    border: 1px solid red;
+    height: 100px;
+    display: flex;
+    ;
+}
